welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:12: error: not found: value growFlower
	growFlower();
        ^