welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.code
def partie(){
	growFlowers();
	gauche();
	avance();avance();
	droite();
	for (k<-1 to 6){
		avance();
	}
	flower(Color.BLUE);
	avance();avance();avance();
	growFlower();
}


def growFlowers(){
	flower(Color.RED);
	avance();avance();avance();avance();
	flower(Color.CYAN);
	recule();recule();
	droite();
	avance();avance();
	gauche();
	flower(Color.ORANGE);
	avance();avance();
	droite();
	avance();avance();
	gauche();
	flower(Color.GREEN);
	recule();recule();recule();recule();
	flower(Color.PINK);
	
}


def flower(c:Color){
	setCouleurBrosse(c);
	baisseBrosse();
	avance();avance();
	leveBrosse();
	gauche();
	avance();
	gauche();
	avance();
	gauche();
	setCouleurBrosse(c);
	baisseBrosse();
	leveBrosse();
	avance();
	setCouleurBrosse(Color.YELLOW);
	baisseBrosse();
	leveBrosse();
	avance();
	setCouleurBrosse(c);
	baisseBrosse();
	leveBrosse();
	droite();
	avance();
	droite();
	avance();
	droite();
	
	
	
	
}
